@@ -1,4 +1,4 @@
-VERSION = 1.6.00
+VERSION = 1.6.01
 COPYRIGHT = Copyright\ smeghead\ 2007\ -\ 2012
 CC = gcc
 CC_VERSION = ${shell gcc --version | grep 'gcc.*[0-9]\.' | sed -e 's/gcc[^0-9]*\([0-9]\).*/\1/g'}
