@@ -2136,6 +2136,116 @@
 	<td></td>
 	<td>Copyright smeghead 2007</td>
 </tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=プロジェクトトップ</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=テストサンプル プロジェクト</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=サブプロジェクトの管理</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>xpath=(//a[contains(text(),'項目設定')])[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=新規項目の追加</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=field.name</td>
+	<td>返信専用属性の数値項目</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=field.reply_property</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=field.type8</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>name=field.display_in_list</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>name=field.sort</td>
+	<td>30</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input.button</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>追加します。よろしいですか？</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
+	<td>2000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=テストサンプル プロジェクトへ</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=a[title=&quot;状態を条件にして検索を行ないます。&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=aaa</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=field2</td>
+	<td>ほげ</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input[name=&quot;reply&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>「状態」が変更されていませんが、間違いないですか？</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>返信します。よろしいですか？</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
+	<td>2000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td></td>
+	<td>Copyright smeghead 2007</td>
+</tr>
 </tbody></table>
 </body>
 </html>
